# c3-invoke

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test-publish.yml
src/c3_invoke/: __init__.py  output.py  pool.py  types.py
src/c3_invoke/providers/: __init__.py  base.py  claude.py  codex.py  gemini.py
src/c3_invoke/server/: __init__.py  app.py  main.py
src/c3_invoke/server/routers/: batch.py  health.py  prompt.py  providers.py
tests/: test_init.py  test_output.py  test_pool.py  test_providers.py
